# sage-maker

./: .gitignore  Makefile  pyproject.toml
sage-maker/: dataloader_pytorch.py  download.py  sages.py  test.ipynb
sage-maker/lightning_logs/version_0/: events.out.tfevents.1615778699.ip-192-168-86-26.eu-west-1.compute.internal.54229.0
sage-maker/lightning_logs/version_1/: events.out.tfevents.1615778738.ip-192-168-86-26.eu-west-1.compute.internal.54719.0
sage-maker/lightning_logs/version_10/: events.out.tfevents.1615780552.ip-192-168-86-26.eu-west-1.compute.internal.71699.0  hparams.yaml
sage-maker/lightning_logs/version_11/: events.out.tfevents.1615780584.ip-192-168-86-26.eu-west-1.compute.internal.72025.0  hparams.yaml
sage-maker/lightning_logs/version_12/: events.out.tfevents.1615780605.ip-192-168-86-26.eu-west-1.compute.internal.72263.0
sage-maker/lightning_logs/version_13/: events.out.tfevents.1615780639.ip-192-168-86-26.eu-west-1.compute.internal.72667.0
sage-maker/lightning_logs/version_14/: events.out.tfevents.1615781034.chriss-mbp.lan.76616.0
sage-maker/lightning_logs/version_15/: events.out.tfevents.1615781442.chriss-mbp.lan.79989.0
sage-maker/lightning_logs/version_2/: events.out.tfevents.1615778788.ip-192-168-86-26.eu-west-1.compute.internal.55327.0  hparams.yaml
sage-maker/lightning_logs/version_3/: events.out.tfevents.1615778846.ip-192-168-86-26.eu-west-1.compute.internal.55825.0
sage-maker/lightning_logs/version_4/: events.out.tfevents.1615778871.ip-192-168-86-26.eu-west-1.compute.internal.56193.0  hparams.yaml
(+6 files in other folders)
