[tool.poetry]
name = "sage-maker"
version = "0.1.0"
description = ""
authors = ["chrisaddy <chris.william.addy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "^1.6.2"
torchvision = "^0.9.0"
pandas = "^1.2.3"
wandb = "^0.10.22"
matplotlib = "^3.3.4"
sklearn = "^0.0"
gym = "^0.18.0"
pytorch-lightning = "^1.2.3"
mlflow = "^1.14.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
